--- a/specifications/src/main/resources/grundladda/templates/scenario4.xml
+++ b/specifications/src/main/resources/grundladda/templates/scenario4.xml
@@ -8,9 +8,6 @@
 		<ns5:typAvUtlatande>Läkarintyg enligt 3 kap, 8 § lagen (1962:381) om
 			allmän försäkring
 		</ns5:typAvUtlatande>
-		
-		<ns5:kommentar>Annat kontaktsätt</ns5:kommentar>
-		
 		<ns5:signeringsdatum>2013-03-17T00:00:00</ns5:signeringsdatum>
 		<ns5:skickatDatum>2013-03-17T00:00:00</ns5:skickatDatum>
 		<ns5:patient>
@@ -48,19 +45,11 @@
 			<ns5:tillstandskod code="S47" />
 		</ns5:medicinsktTillstand>
 		
-		<!-- Ignore -->
+		<!--  Remove this as soon as converter is fixed -->
 		<ns5:bedomtTillstand>
-			<ns5:beskrivning>placeholder</ns5:beskrivning>
+			<ns5:beskrivning>Placeholder</ns5:beskrivning>
 		</ns5:bedomtTillstand>
-		<!-- to here -->
-		
-		<ns5:aktivitet>
-			<ns5:aktivitetskod>Patienten_behover_fa_kontakt_med_Arbetsformedlingen</ns5:aktivitetskod>
-		</ns5:aktivitet>
-		
-		<ns5:aktivitet>
-			<ns5:aktivitetskod>Forandrat_ressatt_till_arbetsplatsen_ar_aktuellt</ns5:aktivitetskod>
-		</ns5:aktivitet>
+		<!-- remove to here -->
 		
 		<ns5:funktionstillstand>
 			<ns5:beskrivning>Kraftigt nedsatt rörlighet i överarmen pga skadan.
@@ -71,16 +60,9 @@
 			</ns5:beskrivning>
 			<ns5:typAvFunktionstillstand>Kroppsfunktion</ns5:typAvFunktionstillstand>
 		</ns5:funktionstillstand>
-		
-	
-   	 	<ns5:referens>
-    		<ns5:referenstyp>Annat</ns5:referenstyp>
-     		<ns5:datum>2013-03-10</ns5:datum>
-   		</ns5:referens>
 
 		<ns5:funktionstillstand>
-			<ns5:beskrivning>Aktivitetsnedsättning:
-				Patienten bör/kan inte använda armen förrän skadan
+			<ns5:beskrivning>Patienten bör/kan inte använda armen förrän skadan
 				läkt. Skadan förvärras vid för tidigt
 				påtvingad belastning. Patienten
 				kan inte lyfta armen utan den ska hållas
@@ -103,6 +85,7 @@
 				</ns5:arbetsformagaNedsattning>
 			</ns5:arbetsformaga>
 		</ns5:funktionstillstand>
+
 
 	</lakarutlatande>
 </RegisterMedicalCertificate>
