--- a/specifications/src/main/resources/grundladda/templates/scenario2.xml
+++ b/specifications/src/main/resources/grundladda/templates/scenario2.xml
@@ -8,9 +8,6 @@
 		<ns5:typAvUtlatande>Läkarintyg enligt 3 kap, 8 § lagen (1962:381) om
 			allmän försäkring
 		</ns5:typAvUtlatande>
-		
-		<ns5:kommentar>Annat kontaktsätt</ns5:kommentar>
-		
 		<ns5:signeringsdatum>2013-03-17T00:00:00</ns5:signeringsdatum>
 		<ns5:skickatDatum>2013-03-17T00:00:00</ns5:skickatDatum>
 		<ns5:patient>
@@ -38,69 +35,41 @@
 				</ns3:vardgivare>
 			</ns3:enhet>
 		</ns5:skapadAvHosPersonal>
-
+		
 		<ns5:vardkontakt>
 			<ns5:vardkontakttyp>Min_undersokning_av_patienten</ns5:vardkontakttyp>
 			<ns5:vardkontaktstid>2013-03-17</ns5:vardkontaktstid>
 		</ns5:vardkontakt>
 
-		<ns5:medicinsktTillstand>
-			<ns5:tillstandskod code="S47" />
-		</ns5:medicinsktTillstand>
+		<ns5:aktivitet>
+			<ns5:aktivitetskod>Avstangning_enligt_SmL_pga_smitta</ns5:aktivitetskod>
+		</ns5:aktivitet>
 		
-		<!-- Ignore -->
+		<!--  Remove this as soon as converter is fixed -->
 		<ns5:bedomtTillstand>
-			<ns5:beskrivning>placeholder</ns5:beskrivning>
+			<ns5:beskrivning>Placeholder</ns5:beskrivning>
 		</ns5:bedomtTillstand>
-		<!-- to here -->
-		
-		<ns5:aktivitet>
-			<ns5:aktivitetskod>Patienten_behover_fa_kontakt_med_Arbetsformedlingen</ns5:aktivitetskod>
-		</ns5:aktivitet>
-		
-		<ns5:aktivitet>
-			<ns5:aktivitetskod>Forandrat_ressatt_till_arbetsplatsen_ar_aktuellt</ns5:aktivitetskod>
-		</ns5:aktivitet>
 		
 		<ns5:funktionstillstand>
-			<ns5:beskrivning>Kraftigt nedsatt rörlighet i överarmen pga skadan.
-				Böj- och sträckförmågan är mycket dålig.
-				Smärtar vid rörelse vilket
-				ger att patienten inte kan använda armen särkilt
-				mycket.
-			</ns5:beskrivning>
-			<ns5:typAvFunktionstillstand>Kroppsfunktion</ns5:typAvFunktionstillstand>
-		</ns5:funktionstillstand>
-		
-	
-   	 	<ns5:referens>
-    		<ns5:referenstyp>Annat</ns5:referenstyp>
-     		<ns5:datum>2013-03-10</ns5:datum>
-   		</ns5:referens>
-
-		<ns5:funktionstillstand>
-			<ns5:beskrivning>Aktivitetsnedsättning:
-				Patienten bör/kan inte använda armen förrän skadan
-				läkt. Skadan förvärras vid för tidigt
-				påtvingad belastning. Patienten
-				kan inte lyfta armen utan den ska hållas
-				riktad nedåt och i fast läge
-				så mycket
-				som möjligt under tiden för läkning.
-			</ns5:beskrivning>
 			<ns5:typAvFunktionstillstand>Aktivitet</ns5:typAvFunktionstillstand>
 			<ns5:arbetsformaga>
+				<ns5:prognosangivelse>Aterstallas_helt</ns5:prognosangivelse>
 				<ns5:arbetsuppgift>
 					<ns5:typAvArbetsuppgift>Dirigent
 						Dirigerar en för större orkester på
 						deltid
 					</ns5:typAvArbetsuppgift>
 				</ns5:arbetsuppgift>
+
 				<ns5:arbetsformagaNedsattning>
 					<ns5:varaktighetFrom>2013-03-17</ns5:varaktighetFrom>
 					<ns5:varaktighetTom>2013-04-07</ns5:varaktighetTom>
-					<ns5:nedsattningsgrad>Helt_nedsatt</ns5:nedsattningsgrad>
+					<ns5:nedsattningsgrad>Nedsatt_med_1/4</ns5:nedsattningsgrad>
 				</ns5:arbetsformagaNedsattning>
+
+				<ns5:sysselsattning>
+					<ns5:typAvSysselsattning>Nuvarande_arbete</ns5:typAvSysselsattning>
+				</ns5:sysselsattning>
 			</ns5:arbetsformaga>
 		</ns5:funktionstillstand>
 
