--- a/ansible/roles/intygstjanst-systemvariabler/templates/certificate-env.sh.j2
+++ b/ansible/roles/intygstjanst-systemvariabler/templates/certificate-env.sh.j2
@@ -1,6 +1,7 @@
-ENV_CFG="-Dspring.profiles.active={{ profile }}"
+ENV_CFG="-Dspring.profiles.active={{ profile }} -Dfile.encoding=UTF-8"
 MEM_CFG="-Xms1024m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=512m"
+DEBUG_CFG="-XX:-HeapDumpOnOutOfMemoryError -XX:HeapDumpPath={{ inera_tomcat_folder }}"
 CREDENTIALS_CFG="-Dcredentials.file={{ etc_folder }}/credentials.properties"
 INTYG_CFG="-Dcertificate.config.file={{ etc_folder }}/certificate.properties -Dcertificate.logback.file={{ etc_folder }}/certificate-logback.xml"
 RECIPIENT_CFG="-Drecipient.config.file={{ etc_folder }}/recipient.properties"
-export JAVA_OPTS="$JAVA_OPTS $ENV_CFG $MEM_CFG $CREDENTIALS_CFG $INTYG_CFG $RECIPIENT_CFG"
+export JAVA_OPTS="$JAVA_OPTS $ENV_CFG $MEM_CFG $DEBUG_CFG $CREDENTIALS_CFG $INTYG_CFG $RECIPIENT_CFG"
