--- a/ansible/roles/intygstjanst-systemvariabler/templates/certificate-env.sh.j2
+++ b/ansible/roles/intygstjanst-systemvariabler/templates/certificate-env.sh.j2
@@ -4,4 +4,5 @@ DEBUG_CFG="-XX:-HeapDumpOnOutOfMemoryError -XX:HeapDumpPath={{ inera_tomcat_fold
 CREDENTIALS_CFG="-Dcredentials.file={{ config_etc_folder }}/credentials.properties"
 INTYG_CFG="-Dcertificate.config.folder={{ config_etc_folder }} -Dcertificate.config.file={{ config_etc_folder }}/certificate.properties -Dcertificate.logback.file={{ config_etc_folder }}/certificate-logback.xml"
 RECIPIENT_CFG="-Drecipient.config.file={{ config_etc_folder }}/recipient.properties"
-export JAVA_OPTS="$JAVA_OPTS $ENV_CFG $JVM_CFG $DEBUG_CFG $CREDENTIALS_CFG $INTYG_CFG $RECIPIENT_CFG"
+AMQ_CFG="-Dorg.apache.activemq.SERIALIZABLE_PACKAGES=\"*\""
+export JAVA_OPTS="$JAVA_OPTS $ENV_CFG $JVM_CFG $DEBUG_CFG $CREDENTIALS_CFG $INTYG_CFG $RECIPIENT_CFG $AMQ_CFG"
