--- a/ansible/roles/intygstjanst-systemvariabler/templates/certificate-env.sh.j2
+++ b/ansible/roles/intygstjanst-systemvariabler/templates/certificate-env.sh.j2
@@ -3,6 +3,6 @@ JVM_CFG="-Xms1024m -Xmx1024m -Dfile.encoding=UTF-8"
 DEBUG_CFG="-XX:-HeapDumpOnOutOfMemoryError -XX:HeapDumpPath={{ inera_tomcat_folder }}"
 CREDENTIALS_CFG="-Dcredentials.file={{ config_etc_folder }}/credentials.properties"
 INTYG_CFG="-Dcertificate.config.folder={{ config_etc_folder }} -Dcertificate.config.file={{ config_etc_folder }}/certificate.properties -Dcertificate.logback.file={{ config_etc_folder }}/certificate-logback.xml"
-RECIPIENT_CFG="-Drecipient.config.file={{ config_etc_folder }}/recipient.properties"
+RECIPIENT_CFG="-Drecipient.config.file={{ config_etc_folder }}/recipients.json"
 AMQ_CFG="-Dorg.apache.activemq.SERIALIZABLE_PACKAGES=\\\"*\\\""
 export JAVA_OPTS="$JAVA_OPTS $ENV_CFG $JVM_CFG $DEBUG_CFG $CREDENTIALS_CFG $INTYG_CFG $RECIPIENT_CFG $AMQ_CFG"
